--- a/src/main/resources/com/example/demo/hello-view.fxml
+++ b/src/main/resources/com/example/demo/hello-view.fxml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.demo.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Arc?>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <Button layoutX="183.0" layoutY="239.0" mnemonicParsing="false" text="Button" />
+      <Button layoutX="319.0" layoutY="240.0" mnemonicParsing="false" text="Button" />
+      <Button layoutX="448.0" layoutY="239.0" mnemonicParsing="false" text="Button" />
+      <Arc fill="#ff941f" layoutX="122.0" layoutY="252.0" length="270.0" radiusX="100.0" radiusY="100.0" startAngle="45.0" stroke="BLACK" strokeType="INSIDE" type="ROUND" />
+      <Button layoutX="599.0" layoutY="240.0" mnemonicParsing="false" text="Button" />
+   </children>
+</AnchorPane>
