--- a/src/main/resources/com/example/demo/hello-view.fxml
+++ b/src/main/resources/com/example/demo/hello-view.fxml
@@ -2,14 +2,14 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Arc?>
+<?import javafx.scene.shape.Circle?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.HelloController">
    <children>
-      <Button layoutX="183.0" layoutY="239.0" mnemonicParsing="false" text="Button" />
-      <Button layoutX="319.0" layoutY="240.0" mnemonicParsing="false" text="Button" />
-      <Button layoutX="448.0" layoutY="239.0" mnemonicParsing="false" text="Button" />
-      <Arc fill="#ff941f" layoutX="122.0" layoutY="252.0" length="270.0" radiusX="100.0" radiusY="100.0" startAngle="45.0" stroke="BLACK" strokeType="INSIDE" type="ROUND" />
-      <Button layoutX="599.0" layoutY="240.0" mnemonicParsing="false" text="Button" />
+      <Button layoutX="384.0" layoutY="22.0" mnemonicParsing="false" onAction="#up" text="Up" />
+      <Button alignment="BOTTOM_CENTER" layoutX="376.0" layoutY="544.0" mnemonicParsing="false" onAction="#down" text="Down" />
+      <Button layoutX="32.0" layoutY="287.0" mnemonicParsing="false" onAction="#left" text="Left" />
+      <Button layoutX="718.0" layoutY="287.0" mnemonicParsing="false" onAction="#right" text="Right" />
+      <Circle fx:id="circle" fill="#ff9a1f" layoutX="400.0" layoutY="287.0" radius="100.0" stroke="BLACK" strokeType="INSIDE" />
    </children>
 </AnchorPane>
