--- a/src/main/resources/com/example/demo/hello-view.fxml
+++ b/src/main/resources/com/example/demo/hello-view.fxml
@@ -1,15 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Circle?>
+<!--04-->
+<!--<?import javafx.scene.control.Button?>-->
+<!--<?import javafx.scene.layout.AnchorPane?>-->
+<!--<?import javafx.scene.shape.Circle?>-->
+<!--<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.HelloController">-->
+<!--   <children>-->
+<!--      <Button layoutX="384.0" layoutY="22.0" mnemonicParsing="false" onAction="#up" text="Up" />-->
+<!--      <Button alignment="BOTTOM_CENTER" layoutX="376.0" layoutY="544.0" mnemonicParsing="false" onAction="#down" text="Down" />-->
+<!--      <Button layoutX="32.0" layoutY="287.0" mnemonicParsing="false" onAction="#left" text="Left" />-->
+<!--      <Button layoutX="718.0" layoutY="287.0" mnemonicParsing="false" onAction="#right" text="Right" />-->
+<!--      <Circle fx:id="circle" fill="#ff9a1f" layoutX="400.0" layoutY="287.0" radius="100.0" stroke="BLACK" strokeType="INSIDE" />-->
+<!--   </children>-->
+<!--</AnchorPane>-->
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.HelloController">
+
+<!--05-->
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" >
    <children>
-      <Button layoutX="384.0" layoutY="22.0" mnemonicParsing="false" onAction="#up" text="Up" />
-      <Button alignment="BOTTOM_CENTER" layoutX="376.0" layoutY="544.0" mnemonicParsing="false" onAction="#down" text="Down" />
-      <Button layoutX="32.0" layoutY="287.0" mnemonicParsing="false" onAction="#left" text="Left" />
-      <Button layoutX="718.0" layoutY="287.0" mnemonicParsing="false" onAction="#right" text="Right" />
-      <Circle fx:id="circle" fill="#ff9a1f" layoutX="400.0" layoutY="287.0" radius="100.0" stroke="BLACK" strokeType="INSIDE" />
+      <Label fx:id="label_title" layoutX="-1.0" layoutY="70.0" prefHeight="18.0" prefWidth="600.0" text="Level 1" />
+      <Label fx:id="label_text" layoutX="1.0" layoutY="281.0" prefHeight="18.0" prefWidth="600.0" text="This is some css style" />
    </children>
 </AnchorPane>
