--- a/src/main/resources/com/example/demo/hello-view.fxml
+++ b/src/main/resources/com/example/demo/hello-view.fxml
@@ -16,12 +16,32 @@
 
 
 <!--05-->
+<!--<?import javafx.scene.control.Label?>-->
+<!--<?import javafx.scene.layout.AnchorPane?>-->
+<!--<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" >-->
+<!--   <children>-->
+<!--      <Label fx:id="label_title" layoutX="-1.0" layoutY="70.0" prefHeight="18.0" prefWidth="600.0" text="Level 1" />-->
+<!--      <Label fx:id="label_text" layoutX="1.0" layoutY="281.0" prefHeight="18.0" prefWidth="600.0" text="This is some css style" />-->
+<!--   </children>-->
+<!--</AnchorPane>-->
+
+<!--06-->
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Arc?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" >
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.HelloController">
    <children>
-      <Label fx:id="label_title" layoutX="-1.0" layoutY="70.0" prefHeight="18.0" prefWidth="600.0" text="Level 1" />
-      <Label fx:id="label_text" layoutX="1.0" layoutY="281.0" prefHeight="18.0" prefWidth="600.0" text="This is some css style" />
+      <Label layoutX="155.0" layoutY="61.0" text="This is scene1">
+         <font>
+            <Font size="48.0" />
+         </font></Label>
+      <Button layoutX="238.0" layoutY="286.0" mnemonicParsing="false" onAction="#switchToScene2" text="Switch to scene2">
+         <font>
+            <Font size="14.0" />
+         </font></Button>
+      <Arc fill="#d1892c" layoutX="308.0" layoutY="200.0" length="270.0" radiusX="57.0" radiusY="56.0" startAngle="45.0" stroke="BLACK" strokeType="INSIDE" type="ROUND" />
    </children>
 </AnchorPane>
