--- a/src/main/resources/com/example/demo/scene2.fxml
+++ b/src/main/resources/com/example/demo/scene2.fxml
@@ -1,22 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <!--06-->
-<?import javafx.scene.control.Button?>
+<!--<?import javafx.scene.control.Button?>-->
+<!--<?import javafx.scene.control.Label?>-->
+<!--<?import javafx.scene.layout.AnchorPane?>-->
+<!--<?import javafx.scene.shape.Circle?>-->
+<!--<?import javafx.scene.text.Font?>-->
+<!--<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.HelloController">-->
+<!--    <children>-->
+<!--        <Label layoutX="155.0" layoutY="61.0" text="This is scene2">-->
+<!--            <font>-->
+<!--                <Font size="48.0" />-->
+<!--            </font></Label>-->
+<!--        <Button layoutX="238.0" layoutY="286.0" mnemonicParsing="false" onAction="#switchToScene1" text="Switch to scene1">-->
+<!--            <font>-->
+<!--                <Font size="14.0" />-->
+<!--            </font></Button>-->
+<!--      <Circle fill="#174f84" layoutX="300.0" layoutY="200.0" radius="65.0" stroke="BLACK" strokeType="INSIDE" />-->
+<!--    </children>-->
+<!--</AnchorPane>-->
+
+<!--07-->
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.HelloController">
-    <children>
-        <Label layoutX="155.0" layoutY="61.0" text="This is scene2">
-            <font>
-                <Font size="48.0" />
-            </font></Label>
-        <Button layoutX="238.0" layoutY="286.0" mnemonicParsing="false" onAction="#switchToScene1" text="Switch to scene1">
-            <font>
-                <Font size="14.0" />
-            </font></Button>
-      <Circle fill="#174f84" layoutX="300.0" layoutY="200.0" radius="65.0" stroke="BLACK" strokeType="INSIDE" />
-    </children>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.Controller2">
+   <children>
+      <Label fx:id="label_name" layoutX="25.0" layoutY="173.0" text="Hello:">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Label>
+   </children>
 </AnchorPane>
