--- a/src/main/resources/com/example/demo/hello-view.fxml
+++ b/src/main/resources/com/example/demo/hello-view.fxml
@@ -41,30 +41,45 @@
 <!--      <Arc fill="#d1892c" layoutX="308.0" layoutY="200.0" length="270.0" radiusX="57.0" radiusY="56.0" startAngle="45.0" stroke="BLACK" strokeType="INSIDE" type="ROUND" />-->
 <!--   </children>-->
 <!--</AnchorPane>-->
-
 <!--07-->
+<!--<?import javafx.scene.control.Button?>-->
+<!--<?import javafx.scene.control.Label?>-->
+<!--<?import javafx.scene.control.TextField?>-->
+<!--<?import javafx.scene.layout.AnchorPane?>-->
+<!--<?import javafx.scene.text.Font?>-->
+<!--<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.HelloController">-->
+<!--   <children>-->
+<!--      <Button layoutX="274.0" layoutY="293.0" mnemonicParsing="false" onAction="#login" text="Login">-->
+<!--         <font>-->
+<!--            <Font size="14.0" />-->
+<!--         </font>-->
+<!--      </Button>-->
+<!--      <Label layoutX="86.0" layoutY="169.0" text="username:">-->
+<!--         <font>-->
+<!--            <Font size="18.0" />-->
+<!--         </font>-->
+<!--      </Label>-->
+<!--      <TextField fx:id="textfield_name" layoutX="224.0" layoutY="165.0">-->
+<!--         <font>-->
+<!--            <Font size="18.0" />-->
+<!--         </font>-->
+<!--      </TextField>-->
+<!--   </children>-->
+<!--</AnchorPane>-->
+
+<!--08-->
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.HelloController">
+<AnchorPane fx:id="scenePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.HelloController">
    <children>
-      <Button layoutX="274.0" layoutY="293.0" mnemonicParsing="false" onAction="#login" text="Login">
+      <Button fx:id="button_logout" layoutX="274.0" layoutY="188.0" mnemonicParsing="false" onAction="#logout" text="Logout" />
+      <Label fx:id="label_logout" layoutX="180.0" layoutY="77.0" text="Welcome User">
          <font>
-            <Font size="14.0" />
-         </font>
-      </Button>
-      <Label layoutX="86.0" layoutY="169.0" text="username:">
-         <font>
-            <Font size="18.0" />
+            <Font name="Comic Sans MS" size="36.0" />
          </font>
       </Label>
-      <TextField fx:id="textfield_name" layoutX="224.0" layoutY="165.0">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </TextField>
    </children>
 </AnchorPane>
