--- a/src/main/resources/com/example/demo/scene2.fxml
+++ b/src/main/resources/com/example/demo/scene2.fxml
@@ -19,17 +19,37 @@
 <!--      <Circle fill="#174f84" layoutX="300.0" layoutY="200.0" radius="65.0" stroke="BLACK" strokeType="INSIDE" />-->
 <!--    </children>-->
 <!--</AnchorPane>-->
-
 <!--07-->
+<!--<?import javafx.scene.control.Label?>-->
+<!--<?import javafx.scene.layout.AnchorPane?>-->
+<!--<?import javafx.scene.text.Font?>-->
+<!--<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.Controller2">-->
+<!--   <children>-->
+<!--      <Label fx:id="label_name" layoutX="25.0" layoutY="173.0" text="Hello:">-->
+<!--         <font>-->
+<!--            <Font size="36.0" />-->
+<!--         </font>-->
+<!--      </Label>-->
+<!--   </children>-->
+<!--</AnchorPane>-->
+
+<!--08-->
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.Controller2">
+
+<AnchorPane fx:id="scenePane2" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.HelloController">
    <children>
-      <Label fx:id="label_name" layoutX="25.0" layoutY="173.0" text="Hello:">
+      <Button fx:id="button_login" layoutX="266.0" layoutY="180.0" mnemonicParsing="false" onAction="#login" text="Login">
          <font>
-            <Font size="36.0" />
+            <Font size="18.0" />
+         </font>
+      </Button>
+      <Label fx:id="label_login" layoutX="62.0" layoutY="89.0" text="Please login to continue">
+         <font>
+            <Font name="Arial Black" size="36.0" />
          </font>
       </Label>
    </children>
