--- a/src/main/resources/com/example/demo/hello-view.fxml
+++ b/src/main/resources/com/example/demo/hello-view.fxml
@@ -66,20 +66,36 @@
 <!--      </TextField>-->
 <!--   </children>-->
 <!--</AnchorPane>-->
-
 <!--08-->
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<!--<?import javafx.scene.control.Button?>-->
+<!--<?import javafx.scene.control.Label?>-->
+<!--<?import javafx.scene.layout.AnchorPane?>-->
+<!--<?import javafx.scene.text.Font?>-->
+<!--<AnchorPane fx:id="scenePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.HelloController">-->
+<!--   <children>-->
+<!--      <Button fx:id="button_logout" layoutX="274.0" layoutY="188.0" mnemonicParsing="false" onAction="#logout" text="Logout" />-->
+<!--      <Label fx:id="label_logout" layoutX="180.0" layoutY="77.0" text="Welcome User">-->
+<!--         <font>-->
+<!--            <Font name="Comic Sans MS" size="36.0" />-->
+<!--         </font>-->
+<!--      </Label>-->
+<!--   </children>-->
+<!--</AnchorPane>-->
 
-<AnchorPane fx:id="scenePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.HelloController">
+<!--09-->
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.HelloController">
    <children>
-      <Button fx:id="button_logout" layoutX="274.0" layoutY="188.0" mnemonicParsing="false" onAction="#logout" text="Logout" />
-      <Label fx:id="label_logout" layoutX="180.0" layoutY="77.0" text="Welcome User">
-         <font>
-            <Font name="Comic Sans MS" size="36.0" />
-         </font>
-      </Label>
+      <Button fx:id="button_btn1" layoutX="274.0" layoutY="361.0" mnemonicParsing="false" onAction="#displayImage" text="Button" />
+      <ImageView fx:id="imageview_img1" fitHeight="329.0" fitWidth="331.0" layoutX="120.0" layoutY="20.0" pickOnBounds="true" smooth="false">
+         <image>
+            <Image url="@cat.jpg" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
